projects/org-security-scanner/force-app/main/default/objects/SecurityFinding__c/SecurityFinding__c.object-meta.xml
<CustomObject>
    <description>One record per detected security issue, child of SecurityScanRun__c. Stores the check that fired, the affected component, business impact, step-by-step remediation, and the admin acknowledgement workflow state. Automatically deleted when the parent scan run is deleted.</description>
    <label>Security Finding</label>
    <nameField>
        <label>Security Finding Name</label>
        <type>AutoNumber</type>
        <displayFormat>FIND-{00000}</displayFormat>
    </nameField>
    <pluralLabel>Security Findings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>