projects/org-security-scanner/force-app/main/default/objects/SecurityFinding__c/fields/AcknowledgedBy__c.field-meta.xml
<CustomField>
    <fullName>AcknowledgedBy__c</fullName>
    <description>Which admin last changed the status away from Open. Stored explicitly for fast SOQL filtering - do not derive from audit history.</description>
    <inlineHelpText>The admin who last changed the status away from Open. Stored explicitly for fast SOQL filtering - do not derive from audit history.</inlineHelpText>
    <label>Acknowledged By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Security Findings (Acknowledged By)</relationshipLabel>
    <relationshipName>SecurityFindingsAcknowledgedBy</relationshipName>
    <type>Lookup</type>
</CustomField>