projects/org-security-scanner/force-app/main/default/objects/SecurityFinding__c/fields/AcknowledgedDate__c.field-meta.xml
<CustomField>
    <fullName>AcknowledgedDate__c</fullName>
    <description>Timestamp of the last status change away from Open. Stored explicitly for fast SOQL filtering.</description>
    <label>Acknowledged Date</label>
    <type>DateTime</type>
</CustomField>