projects/org-security-scanner/force-app/main/default/objects/SecurityFinding__c/fields/AcknowledgementNote__c.field-meta.xml
<CustomField>
    <fullName>AcknowledgementNote__c</fullName>
    <description>Admin comment on acknowledgement or risk acceptance. Required when setting status to Risk Accepted or False Positive.</description>
    <inlineHelpText>Admin comment explaining the rationale. Required when setting status to Risk Accepted or False Positive.</inlineHelpText>
    <label>Acknowledgement Note</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>