projects/org-security-scanner/force-app/main/default/objects/SecurityFinding__c/fields/AffectedComponent__c.field-meta.xml
<CustomField>
    <fullName>AffectedComponent__c</fullName>
    <description>Name of the profile, user, class, flow, etc. that triggered the finding.</description>
    <label>Affected Component</label>
    <length>255</length>
    <type>Text</type>
</CustomField>