projects/org-security-scanner/force-app/main/default/objects/SecurityFinding__c/fields/AffectedComponentType__c.field-meta.xml
<CustomField>
    <fullName>AffectedComponentType__c</fullName>
    <description>Enables Setup navigation and icon selection. All types produced by the 13 runners must be in this list - an unmapped type causes the finding insert to fail.</description>
    <inlineHelpText>The type of Salesforce component that triggered this finding. Used to display the correct icon and generate a Setup navigation link in the finding detail panel.</inlineHelpText>
    <label>Affected Component Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Profile</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>ApexClass</fullName>
            </value>
            <value>
                <fullName>ApexTrigger</fullName>
            </value>
            <value>
                <fullName>LWC</fullName>
            </value>
            <value>
                <fullName>AuraComponent</fullName>
            </value>
            <value>
                <fullName>ConnectedApp</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>OrgSetting</fullName>
            </value>
            <value>
                <fullName>CustomObject</fullName>
            </value>
            <value>
                <fullName>Field</fullName>
            </value>
            <value>
                <fullName>PermissionSet</fullName>
            </value>
            <value>
                <fullName>StaticResource</fullName>
            </value>
            <value>
                <fullName>Certificate</fullName>
            </value>
            <value>
                <fullName>RemoteSite</fullName>
            </value>
            <value>
                <fullName>ExperienceCloudSite</fullName>
            </value>
            <value>
                <fullName>SharingRule</fullName>
            </value>
            <value>
                <fullName>NamedCredential</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>