projects/org-security-scanner/force-app/main/default/objects/SecurityFinding__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Groups findings for heatmap and filter bar. 13 values matching the 13 scanner categories.</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User &amp; Access</fullName>
            </value>
            <value>
                <fullName>Guest User / Experience Cloud</fullName>
            </value>
            <value>
                <fullName>Sharing &amp; Record Access</fullName>
            </value>
            <value>
                <fullName>Session &amp; Auth</fullName>
            </value>
            <value>
                <fullName>Connected Apps &amp; Integrations</fullName>
            </value>
            <value>
                <fullName>Apex &amp; Automation</fullName>
            </value>
            <value>
                <fullName>LWC &amp; Aura</fullName>
            </value>
            <value>
                <fullName>Agentforce &amp; GenAI</fullName>
            </value>
            <value>
                <fullName>Metadata &amp; Secrets</fullName>
            </value>
            <value>
                <fullName>File Upload &amp; Execution</fullName>
            </value>
            <value>
                <fullName>Certificates &amp; Encryption</fullName>
            </value>
            <value>
                <fullName>Monitoring</fullName>
            </value>
            <value>
                <fullName>Health Check Baseline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>