projects/org-security-scanner/force-app/main/default/objects/SecurityFinding__c/fields/CategoryCode__c.field-meta.xml
<CustomField>
    <fullName>CategoryCode__c</fullName>
    <description>Short code (UA, GU, SRA...) for programmatic grouping. Valid values: UA, GU, SRA, SA, CAI, AA, LA, AGA, MS, FUE, CE, MON, HCB.</description>
    <inlineHelpText>Short programmatic code for the finding category. Valid values: UA, GU, SRA, SA, CAI, AA, LA, AGA, MS, FUE, CE, MON, HCB.</inlineHelpText>
    <label>Category Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>