projects/org-security-scanner/force-app/main/default/objects/SecurityFinding__c/fields/CheckId__c.field-meta.xml
<CustomField>
    <fullName>CheckId__c</fullName>
    <description>Stable code like UA-001. Not an ExternalId - same CheckId appears across many runs and multiple times per run (one per affected component). Findings are always inserted, never upserted.</description>
    <inlineHelpText>Stable identifier for the security check that produced this finding (e.g. UA-001). The same check ID appears across multiple scan runs. Not unique per record - use the record ID to key findings.</inlineHelpText>
    <label>Check Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>