projects/org-security-scanner/force-app/main/default/objects/SecurityFinding__c/fields/CheckName__c.field-meta.xml
<CustomField>
    <fullName>CheckName__c</fullName>
    <description>Human-readable title shown in UI.</description>
    <label>Check Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>