projects/org-security-scanner/force-app/main/default/objects/SecurityFinding__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>What was found and why it is a security risk. The Risk section shown to admins.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>