projects/org-security-scanner/force-app/main/default/objects/SecurityFinding__c/fields/FindingType__c.field-meta.xml
<CustomField>
    <fullName>FindingType__c</fullName>
    <description>Automated = directly detected violation. Recommendation = admin must manually review to confirm.</description>
    <inlineHelpText>Automated: a policy violation was directly detected by querying org metadata. Recommendation: the check cannot be fully automated and requires manual admin review to confirm.</inlineHelpText>
    <label>Finding Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automated</fullName>
            </value>
            <value>
                <fullName>Recommendation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>