projects/org-security-scanner/force-app/main/default/objects/SecurityFinding__c/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <description>Business and security consequences if this vulnerability is exploited or left unaddressed. Displayed as the Impact section in the finding detail panel.</description>
    <inlineHelpText>Business and security consequences if this vulnerability is exploited or left unaddressed. Displayed in an amber warning box in the finding detail panel to distinguish consequence from technical description.</inlineHelpText>
    <label>Impact</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>