projects/org-security-scanner/force-app/main/default/objects/SecurityFinding__c/fields/RawEvidence__c.field-meta.xml
<CustomField>
    <fullName>RawEvidence__c</fullName>
    <description>Scrubbed, truncated evidence dump. Processed by SecScanEvidenceUtil: max 10,000 chars, regex-scrubbed for password/token/key patterns. Never stores full raw Apex source bodies.</description>
    <inlineHelpText>Automatically scrubbed technical evidence captured at scan time. Passwords, tokens, and secret-pattern strings are masked with asterisks. For regex-based findings, captures up to 5,000 chars before and after the match (10,000 total). Never contains full raw Apex source bodies.</inlineHelpText>
    <label>Raw Evidence</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>