projects/org-security-scanner/force-app/main/default/objects/SecurityFinding__c/fields/Remediation__c.field-meta.xml
<CustomField>
    <fullName>Remediation__c</fullName>
    <description>Step-by-step fix instructions. The How to Fix section shown to admins.</description>
    <label>Remediation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>