projects/org-security-scanner/force-app/main/default/objects/SecurityFinding__c/fields/ScanRun__c.field-meta.xml
<CustomField>
    <fullName>ScanRun__c</fullName>
    <description>Links to parent SecurityScanRun__c. Master-Detail cascades delete of all findings when run is deleted.</description>
    <label>Scan Run</label>
    <referenceTo>SecurityScanRun__c</referenceTo>
    <relationshipLabel>Security Findings</relationshipLabel>
    <relationshipName>SecurityFindings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>