projects/org-security-scanner/force-app/main/default/objects/SecurityFinding__c/fields/SeverityRank__c.field-meta.xml
<CustomField>
    <fullName>SeverityRank__c</fullName>
    <description>Numeric severity proxy for deterministic severity-first KEYSET sort: Critical=1, High=2, Medium=3, Low=4, Informational=5. Physical field (not formula) - formula fields cannot be custom-indexed and ORDER BY on a formula against 9,000+ rows degrades sort performance. Set once at insert time by buildFinding().</description>
    <label>Severity Rank</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>