projects/org-security-scanner/force-app/main/default/objects/SecurityFinding__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Admin workflow state. Remediated and False Positive are excluded from score calculation.</description>
    <inlineHelpText>Open: unreviewed. Acknowledged: reviewed, action pending. Remediated: fix has been applied. Risk Accepted: admin has consciously accepted this risk. False Positive: confirmed not a real issue. Remediated and False Positive are excluded from the security score.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Acknowledged</fullName>
            </value>
            <value>
                <fullName>Remediated</fullName>
            </value>
            <value>
                <fullName>Risk Accepted</fullName>
            </value>
            <value>
                <fullName>False Positive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>